# Atina

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: test.xml
src/: atinafd.cpp  atinafd.h  atinainotify.cpp  atinainotify.h  atinapipefd.cpp  atinapipefd.h  atinavalueinitializer.cpp  atinavalueinitializer.h  inotify.cpp  inotify.h  inotifyevent.cpp  inotifyevent.h  valueinitializer.cpp  valueinitializer.h
